--- a/src/lib/i18n/en/auth.json
+++ b/src/lib/i18n/en/auth.json
@@ -11,11 +11,13 @@
 	"password": "Password",
 	"passwordMismatch": "Passwords do not match.",
 	"passwordSuccess": "Password updated successfully.",
+	"resetFailure": "Failed to reset password.",
 	"resetNotice": "Enter your email address and if it exists in our system, we'll send you a link to reset your password.",
 	"resetPassword": "Reset password",
 	"resettingPassword": "Resetting password…",
 	"sendResetEmail": "Send reset email",
 	"signUp": "Sign Up",
+	"signUpFailure": "Failed to sign up.",
 	"signUpInfo": "Create an account to add and manage your congregation's info.",
 	"signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
 	"unverified": "Unverified",
@@ -24,6 +26,7 @@
 	"verified.extended": "Your email address has been verified. You may now log in.",
 	"verified.verified": "Verified",
 	"verifyEmail": "Verify email",
-	"verifyFailure": "Verification token has already been used or has expired.",
+	"verifyFailure": "Failed to verify email.",
+	"verifyFailureNotice": "Verification token has already been used or has expired.",
 	"verifying": "Verifying email address…"
 }
