--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -52,6 +52,7 @@
 	"editNotice": "Making edits will delist this congregation until an administrator can approve your changes.",
 	"editSuccess": "Congregation edited successfully.",
 	"editSuccessNotice": "Thanks for the update! Someone will review and approve it shortly or reach out as needed.",
+	"exists": "A congregation with this name already exists in this location",
 	"fit": {
 		"clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
 		"extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
