--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -2,12 +2,30 @@
 	"admin": "Admin",
 	"cancel": "Cancel",
 	"clear": "Clear",
+	"contact": {
+		"account": "Please provide the email address associated with your account.",
+		"contactUs": "Contact Us",
+		"message": "Message",
+		"options": {
+			"claim": "I want to claim a congregation",
+			"delete": "I want to delete my account",
+			"question": "I have a question or comment",
+			"suggest": "I want to suggest an edit"
+		},
+		"proof": "Please provide proof of your connection to this congregation and the email address of the Open Communities account you want to associate the congregation with. If you do not have an account, please sign up first.",
+		"reason": "Reason for contact",
+		"record": "Which congregation are you contacting us about?",
+		"send": "Send"
+	},
 	"continue": "Continue",
 	"delete": "Delete",
 	"edit": "Edit",
 	"editThing": "Edit ‘{{thing}}’",
 	"email": "Email",
+	"emailFailure": "Failed to send message",
 	"emailOrUrl": "Email or URL",
+	"emailSuccess": "Message sent successfully",
+	"emailSuccessNotice": "Thank you for reaching out. Someone will review your message and respond as needed.",
 	"errors": {
 		"401": "You are not authorized to view this page",
 		"404": "Page not found",
