--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -26,6 +26,7 @@
 	"addSuccess": "Congregation added successfully.",
 	"addSuccessNotice": "Thank you for your submission. Someone will review and approve it shortly or reach out as needed.",
 	"approved": "Approved",
+	"claimThis": "Claim this congregation",
 	"clergy": {
 		"clergy": "Clergy",
 		"extended": "List the clergy team below that will lead during the Yamim Noraim."
