--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -72,6 +72,7 @@
 	"search": "Search",
 	"selectThing": "Select {{thing}}…",
 	"share": "Share",
+	"siteCredits": "Credits",
 	"submission": "Submission",
 	"submit": "Submit",
 	"success": "Your {{thing}} was successful",
