--- a/src/lib/i18n/en/auth.json
+++ b/src/lib/i18n/en/auth.json
@@ -5,6 +5,8 @@
 	"emailSent": "Reset email sent. Please check your email for instructions.",
 	"forgotPassword": "Forgot password",
 	"login": "Login",
+	"loginFailure": "Failed to log in.",
+	"loginSuccess": "Logged in successfully.",
 	"logout": "Logout",
 	"name": "Name",
 	"oldPassword": "Old password",
