--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -53,6 +53,7 @@
 		"subtitle": "High Holidays 5785",
 		"title": "Open Communities"
 	},
+	"http": "Must begin with `http://` or `https://`",
 	"invalidUrl": "Invalid URL",
 	"location": "Location",
 	"menu": "Menu",
@@ -67,7 +68,8 @@
 	"previous": "Previous",
 	"privacyPolicy": "Privacy Policy",
 	"reloadPage": "Reload page",
-	"required": "Response is required",
+	"required": "Required",
+	"requiredResponse": "Response is required",
 	"reset": "Reset",
 	"search": "Search",
 	"selectThing": "Select {{thing}}…",
