--- a/src/lib/i18n/de/auth.json
+++ b/src/lib/i18n/de/auth.json
@@ -1,1 +1,36 @@
-{}
+{
+	"admin": "Verwaltung",
+	"confirmPassword": "Bestätigen Sie das Passwort",
+	"continueToLogin": "Weiter zur Anmeldung",
+	"emailSent": "E-Mail zum Zurücksetzen gesendet. Bitte prüfen Sie Ihre E-Mail für Anweisungen.",
+	"forgotPassword": "Passwort vergessen",
+	"login": "Anmeldung",
+	"loginFailure": "Anmeldung fehlgeschlagen.",
+	"loginSuccess": "Erfolgreich eingeloggt.",
+	"logout": "Abmeldung",
+	"name": "Name",
+	"oldPassword": "Altes Passwort",
+	"password": "Passwort",
+	"passwordMismatch": "Die Kennwörter stimmen nicht überein.",
+	"passwordSuccess": "Passwort erfolgreich aktualisiert.",
+	"resetFailure": "Das Passwort konnte nicht zurückgesetzt werden.",
+	"resetNotice": "Geben Sie Ihre E-Mail-Adresse ein. Wenn sie in unserem System vorhanden ist, senden wir Ihnen einen Link, mit dem Sie Ihr Passwort zurücksetzen können.",
+	"resetPassword": "Passwort zurücksetzen",
+	"resettingPassword": "Passwort zurücksetzen...",
+	"sendResetEmail": "E-Mail zum Zurücksetzen senden",
+	"signUp": "Anmeldung",
+	"signUpFailure": "Die Anmeldung ist fehlgeschlagen.",
+	"signUpInfo": "Erstellen Sie ein Konto, um die Daten Ihrer Gemeinde hinzuzufügen und zu verwalten.",
+	"signUpSuccess": "Anmeldung erfolgreich. Bitte prüfen Sie Ihre E-Mail auf Verifizierungsanweisungen.",
+	"unverified": "Unverifiziert",
+	"updateFailure": "Das Konto konnte nicht aktualisiert werden.",
+	"updateSuccess": "Konto erfolgreich aktualisiert.",
+	"verified": {
+		"extended": "Ihre E-Mail Adresse wurde verifiziert. Sie können sich jetzt einloggen.",
+		"verified": "Geprüft"
+	},
+	"verifyEmail": "E-Mail verifizieren",
+	"verifyFailure": "E-Mail konnte nicht verifiziert werden.",
+	"verifyFailureNotice": "Das Verifizierungs-Token wurde bereits verwendet oder ist abgelaufen.",
+	"verifying": "Überprüfung der E-Mail-Adresse..."
+}
