--- a/src/lib/i18n/de/common.json
+++ b/src/lib/i18n/de/common.json
@@ -1,1 +1,93 @@
-{}
+{
+  "admin": "Verwaltung",
+  "cancel": "Abbrechen",
+  "clear": "Klar",
+  "contact": {
+    "account": "Bitte geben Sie die mit Ihrem Konto verbundene E-Mail-Adresse an.",
+    "contactUs": "Kontakt",
+    "message": "Nachricht",
+    "options": {
+      "claim": "Ich möchte eine Gemeinde beanspruchen",
+      "delete": "Ich möchte mein Konto löschen",
+      "question": "Ich habe eine Frage oder einen Kommentar",
+      "suggest": "Ich möchte eine Änderung vorschlagen"
+    },
+    "proof": "Bitte geben Sie einen Nachweis über Ihre Verbindung zu dieser Gemeinde und die E-Mail-Adresse des Open Communities-Kontos an, mit dem Sie die Gemeinde verknüpfen möchten. Wenn Sie noch kein Konto haben, melden Sie sich bitte zuerst an.",
+    "reason": "Grund der Kontaktaufnahme",
+    "record": "Wegen welcher Gemeinde wenden Sie sich an uns?",
+    "send": "Senden Sie"
+  },
+  "continue": "Weiter",
+  "copied": "Link in die Zwischenablage kopiert",
+  "delete": "Löschen",
+  "edit": "bearbeiten",
+  "editThing": "Bearbeiten Sie '{{Ding}}'.",
+  "email": "E-Mail",
+  "emailFailure": "Nachricht konnte nicht gesendet werden",
+  "emailOrUrl": "E-Mail oder URL",
+  "emailSuccess": "Nachricht erfolgreich gesendet",
+  "emailSuccessNotice": "Danke, dass Sie sich gemeldet haben. Jemand wird Ihre Nachricht prüfen und bei Bedarf antworten.",
+  "errors": {
+    "401": "Sie sind nicht berechtigt, diese Seite zu sehen",
+    "404": "Seite nicht gefunden",
+    "500": "Ein unerwarteter Fehler ist aufgetreten",
+    "congregationFailed": "Das Laden der Gemeindedaten ist fehlgeschlagen",
+    "countriesFailed": "Standortdaten konnten nicht geladen werden",
+    "dataFailed": "Daten konnten nicht geladen werden",
+    "email": "Ungültige E-Mail Adresse",
+    "error": "Fehler",
+    "pageFailed": "Die Seitendaten konnten nicht geladen werden",
+    "required": "Dieses Feld ist erforderlich",
+    "url": "Ungültige URL"
+  },
+  "filter": "Filter",
+  "filterBy": "Filtern nach",
+  "formErrors": "Prüfen Sie das Formular auf Fehler.",
+  "home": {
+    "author": "Rabbiner für Waffenstillstand",
+    "blurb": "Feiern Sie die Hohen Feiertage mit einer integrativen, friedensfördernden jüdischen Gemeinschaft.",
+    "ceasefire": "Waffenstillstand jetzt",
+    "credit": "Seite von {{thing}}",
+    "dialogTitle": "Eine Botschaft von Rabbis for Ceasefire",
+    "project": "Eine Initiative von",
+    "subtitle": "Hohe Feiertage 5785",
+    "title": "Offene Gemeinschaften"
+  },
+  "http": "Muss mit `http://` oder `https://` beginnen",
+  "invalidUrl": "Ungültige URL",
+  "location": "Standort",
+  "menu": "Menü",
+  "name": "Name",
+  "next": "Weiter",
+  "nothingFound": "Nichts gefunden",
+  "notice": "Hinweis",
+  "other": "Andere",
+  "otherText": "Anderer Text",
+  "pending": "Genehmigung ausstehend",
+  "prev": "Prev.",
+  "previous": "Vorherige",
+  "privacyPolicy": "Datenschutzbestimmungen",
+  "reloadPage": "Seite neu laden",
+  "required": "Erforderlich",
+  "requiredResponse": "Antwort ist erforderlich",
+  "reset": "Zurücksetzen",
+  "search": "Suche",
+  "selectThing": "Wählen Sie {{Ding}}...",
+  "share": "Teilen Sie",
+  "siteCredits": "Kredite",
+  "submission": "Einreichung",
+  "submit": "Einreichen",
+  "success": "Ihr {{Ding}} war erfolgreich",
+  "termsOfService": "Bedingungen der Dienstleistung",
+  "thingRequired": "{{Ding}} ist erforderlich",
+  "title": "Offene Gemeinschaften",
+  "token": "Token",
+  "transfer": {
+    "desc": "Übertragen Sie das Eigentum an dieser Gemeinde auf einen anderen Benutzer.",
+    "transfer": "Übertragung"
+  },
+  "unspecified": "Nicht spezifiziert",
+  "warning": "Sind Sie sicher, dass Sie weitermachen wollen?",
+  "warningNote": "Diese Aktion kann nicht rückgängig gemacht werden.",
+  "website": "Website"
+}
