--- a/src/lib/i18n/es/auth.json
+++ b/src/lib/i18n/es/auth.json
@@ -1,1 +1,36 @@
-{}
+{
+  "admin": "Admin",
+  "confirmPassword": "Confirmar contraseña",
+  "continueToLogin": "Continuar para iniciar sesión",
+  "emailSent": "Se ha enviado un correo electrónico de restablecimiento. Por favor, revise su correo electrónico para obtener instrucciones.",
+  "forgotPassword": "Contraseña olvidada",
+  "login": "Inicio de sesión",
+  "loginFailure": "No se ha podido iniciar sesión.",
+  "loginSuccess": "Se ha conectado correctamente.",
+  "logout": "Cierre de sesión",
+  "name": "Nombre",
+  "oldPassword": "Contraseña antigua",
+  "password": "Contraseña",
+  "passwordMismatch": "Las contraseñas no coinciden.",
+  "passwordSuccess": "Contraseña actualizada correctamente.",
+  "resetFailure": "No se ha podido restablecer la contraseña.",
+  "resetNotice": "Introduce tu dirección de correo electrónico y, si existe en nuestro sistema, te enviaremos un enlace para restablecer tu contraseña.",
+  "resetPassword": "Restablecer contraseña",
+  "resettingPassword": "Restablecer contraseña...",
+  "sendResetEmail": "Enviar correo electrónico de restablecimiento",
+  "signUp": "Inscribirse",
+  "signUpFailure": "No se ha inscrito.",
+  "signUpInfo": "Cree una cuenta para añadir y gestionar la información de su congregación.",
+  "signUpSuccess": "La inscripción se ha realizado correctamente. Consulta tu correo electrónico para ver las instrucciones de verificación.",
+  "unverified": "Sin verificar",
+  "updateFailure": "No se ha podido actualizar la cuenta.",
+  "updateSuccess": "Cuenta actualizada correctamente.",
+  "verified": {
+    "extended": "Su dirección de correo electrónico ha sido verificada. Ya puede iniciar sesión.",
+    "verified": "Verificado"
+  },
+  "verifyEmail": "Verificar correo electrónico",
+  "verifyFailure": "No se ha podido verificar el correo electrónico.",
+  "verifyFailureNotice": "El token de verificación ya ha sido utilizado o ha caducado.",
+  "verifying": "Verificando la dirección de correo electrónico..."
+}
