--- a/src/lib/i18n/es/common.json
+++ b/src/lib/i18n/es/common.json
@@ -1,1 +1,93 @@
-{}
+{
+  "admin": "Admin",
+  "cancel": "Cancelar",
+  "clear": "Claro",
+  "contact": {
+    "account": "Indique la dirección de correo electrónico asociada a su cuenta.",
+    "contactUs": "Contacte con nosotros",
+    "message": "Mensaje",
+    "options": {
+      "claim": "Quiero reclamar una congregación",
+      "delete": "Quiero eliminar mi cuenta",
+      "question": "Tengo una pregunta o comentario",
+      "suggest": "Quiero sugerir una edición"
+    },
+    "proof": "Proporcione una prueba de su conexión con esta congregación y la dirección de correo electrónico de la cuenta de Open Communities a la que desea asociar la congregación. Si no tiene una cuenta, regístrese primero.",
+    "reason": "Motivo del contacto",
+    "record": "¿Por qué congregación se pone en contacto con nosotros?",
+    "send": "Enviar"
+  },
+  "continue": "Continúe en",
+  "copied": "Enlace copiado en el portapapeles",
+  "delete": "Borrar",
+  "edit": "Editar",
+  "editThing": "Editar '{{cosa}}'",
+  "email": "Correo electrónico",
+  "emailFailure": "Error al enviar el mensaje",
+  "emailOrUrl": "Correo electrónico o URL",
+  "emailSuccess": "Mensaje enviado correctamente",
+  "emailSuccessNotice": "Gracias por ponerse en contacto con nosotros. Alguien revisará su mensaje y le responderá si es necesario.",
+  "errors": {
+    "401": "No está autorizado a ver esta página",
+    "404": "Página no encontrada",
+    "500": "Se ha producido un error inesperado",
+    "congregationFailed": "Error al cargar los datos de la congregación",
+    "countriesFailed": "Error al cargar los datos de localización",
+    "dataFailed": "Error al cargar datos",
+    "email": "Dirección de correo electrónico no válida",
+    "error": "Error",
+    "pageFailed": "Error al cargar los datos de la página",
+    "required": "Este campo es obligatorio",
+    "url": "URL no válida"
+  },
+  "filter": "Filtro",
+  "filterBy": "Filtrar por",
+  "formErrors": "Compruebe si hay errores en el formulario.",
+  "home": {
+    "author": "Rabinos por el alto el fuego",
+    "blurb": "Celebre las Altas Fiestas con una comunidad judía integradora que apoya la paz.",
+    "ceasefire": "Alto el fuego ya",
+    "credit": "Sitio de {{thing}}",
+    "dialogTitle": "Un mensaje de Rabinos por el alto el fuego",
+    "project": "Una iniciativa de",
+    "subtitle": "Altas Fiestas 5785",
+    "title": "Comunidades abiertas"
+  },
+  "http": "Debe comenzar por `http://` o `https://`.",
+  "invalidUrl": "URL no válida",
+  "location": "Ubicación",
+  "menu": "Menú",
+  "name": "Nombre",
+  "next": "Siguiente",
+  "nothingFound": "No se ha encontrado nada",
+  "notice": "Aviso",
+  "other": "Otros",
+  "otherText": "Otros textos",
+  "pending": "Pendiente de aprobación",
+  "prev": "Anterior.",
+  "previous": "Anterior",
+  "privacyPolicy": "Política de privacidad",
+  "reloadPage": "Recargar página",
+  "required": "Requerido",
+  "requiredResponse": "Se requiere respuesta",
+  "reset": "Restablecer",
+  "search": "Buscar en",
+  "selectThing": "Selecciona {{cosa}}...",
+  "share": "Compartir",
+  "siteCredits": "Créditos",
+  "submission": "Presentación",
+  "submit": "Enviar",
+  "success": "Tu {{cosa}} tuvo éxito",
+  "termsOfService": "Condiciones de uso",
+  "thingRequired": "{{thing}} es necesario",
+  "title": "Comunidades abiertas",
+  "token": "Ficha",
+  "transfer": {
+    "desc": "Transferir la propiedad de esta congregación a otro usuario.",
+    "transfer": "Transferencia"
+  },
+  "unspecified": "Sin especificar",
+  "warning": "¿Seguro que quieres continuar?",
+  "warningNote": "Esta acción no puede deshacerse.",
+  "website": "Página web"
+}
