--- a/src/lib/i18n/fr/auth.json
+++ b/src/lib/i18n/fr/auth.json
@@ -1,1 +1,36 @@
-{}
+{
+  "admin": "Administrateur",
+  "confirmPassword": "Confirmer le mot de passe",
+  "continueToLogin": "Continuer à se connecter",
+  "emailSent": "L'email de réinitialisation a été envoyé. Veuillez vérifier votre courrier électronique pour obtenir des instructions.",
+  "forgotPassword": "Mot de passe oublié",
+  "login": "Connexion",
+  "loginFailure": "Échec de la connexion.",
+  "loginSuccess": "Connexion réussie.",
+  "logout": "Déconnexion",
+  "name": "Nom",
+  "oldPassword": "Ancien mot de passe",
+  "password": "Mot de passe",
+  "passwordMismatch": "Les mots de passe ne correspondent pas.",
+  "passwordSuccess": "Le mot de passe a été mis à jour avec succès.",
+  "resetFailure": "Échec de la réinitialisation du mot de passe.",
+  "resetNotice": "Saisissez votre adresse électronique et si elle existe dans notre système, nous vous enverrons un lien pour réinitialiser votre mot de passe.",
+  "resetPassword": "Réinitialiser le mot de passe",
+  "resettingPassword": "Réinitialisation du mot de passe...",
+  "sendResetEmail": "Envoyer un courriel de réinitialisation",
+  "signUp": "S'inscrire",
+  "signUpFailure": "N'a pas réussi à s'inscrire.",
+  "signUpInfo": "Créez un compte pour ajouter et gérer les informations de votre congrégation.",
+  "signUpSuccess": "Inscription réussie. Veuillez vérifier votre e-mail pour les instructions de vérification.",
+  "unverified": "Non vérifié",
+  "updateFailure": "Échec de la mise à jour du compte.",
+  "updateSuccess": "Compte mis à jour avec succès.",
+  "verified": {
+    "extended": "Votre adresse électronique a été vérifiée. Vous pouvez maintenant vous connecter.",
+    "verified": "Vérifié"
+  },
+  "verifyEmail": "Vérifier l'email",
+  "verifyFailure": "Échec de la vérification de l'email.",
+  "verifyFailureNotice": "Le jeton de vérification a déjà été utilisé ou a expiré.",
+  "verifying": "Vérification de l'adresse électronique..."
+}
