--- a/src/lib/i18n/fr/common.json
+++ b/src/lib/i18n/fr/common.json
@@ -1,1 +1,93 @@
-{}
+{
+  "admin": "Administrateur",
+  "cancel": "Annuler",
+  "clear": "Clair",
+  "contact": {
+    "account": "Veuillez indiquer l'adresse électronique associée à votre compte.",
+    "contactUs": "Nous contacter",
+    "message": "Message",
+    "options": {
+      "claim": "Je veux revendiquer une congrégation",
+      "delete": "Je souhaite supprimer mon compte",
+      "question": "J'ai une question ou un commentaire",
+      "suggest": "Je souhaite suggérer une modification"
+    },
+    "proof": "Veuillez fournir une preuve de votre lien avec cette congrégation et l'adresse électronique du compte Open Communities auquel vous souhaitez associer la congrégation. Si vous n'avez pas de compte, veuillez d'abord vous inscrire.",
+    "reason": "Motif du contact",
+    "record": "Quelle est la congrégation pour laquelle vous nous contactez ?",
+    "send": "Envoyer"
+  },
+  "continue": "Continuer",
+  "copied": "Lien copié dans le presse-papiers",
+  "delete": "Supprimer",
+  "edit": "Editer",
+  "editThing": "Modifier '{{chose}}'",
+  "email": "Courriel",
+  "emailFailure": "Échec de l'envoi du message",
+  "emailOrUrl": "Courriel ou URL",
+  "emailSuccess": "Message envoyé avec succès",
+  "emailSuccessNotice": "Merci de nous avoir contactés. Une personne examinera votre message et vous répondra si nécessaire.",
+  "errors": {
+    "401": "Vous n'êtes pas autorisé à consulter cette page",
+    "404": "Page non trouvée",
+    "500": "Une erreur inattendue s'est produite",
+    "congregationFailed": "Échec du chargement des données de congrégation",
+    "countriesFailed": "Échec du chargement des données de localisation",
+    "dataFailed": "Échec du chargement des données",
+    "email": "Adresse électronique invalide",
+    "error": "Erreur",
+    "pageFailed": "Échec du chargement des données de la page",
+    "required": "Ce champ est obligatoire",
+    "url": "URL invalide"
+  },
+  "filter": "Filtre",
+  "filterBy": "Filtrer par",
+  "formErrors": "Vérifier que le formulaire ne comporte pas d'erreurs.",
+  "home": {
+    "author": "Rabbins pour le cessez-le-feu",
+    "blurb": "Célébrez les fêtes de fin d'année au sein d'une communauté juive inclusive et favorable à la paix.",
+    "ceasefire": "Cessez-le-feu maintenant",
+    "credit": "Site de {{chose}}",
+    "dialogTitle": "Un message des rabbins pour le cessez-le-feu",
+    "project": "Une initiative de",
+    "subtitle": "Fêtes de fin d'année 5785",
+    "title": "Communautés ouvertes"
+  },
+  "http": "Doit commencer par `http://` ou `https://`.",
+  "invalidUrl": "URL invalide",
+  "location": "Localisation",
+  "menu": "Menu",
+  "name": "Nom",
+  "next": "Suivant",
+  "nothingFound": "Rien n'a été trouvé",
+  "notice": "Avis",
+  "other": "Autres",
+  "otherText": "Autre texte",
+  "pending": "En attente d'approbation",
+  "prev": "Prev.",
+  "previous": "Précédent",
+  "privacyPolicy": "Politique de confidentialité",
+  "reloadPage": "Recharger la page",
+  "required": "Exigée",
+  "requiredResponse": "Une réponse est requise",
+  "reset": "Remise à zéro",
+  "search": "Recherche",
+  "selectThing": "Sélectionner {{chose}}...",
+  "share": "Partager",
+  "siteCredits": "Crédits",
+  "submission": "Soumission",
+  "submit": "Soumettre",
+  "success": "Votre {{chose}} a réussi",
+  "termsOfService": "Conditions d'utilisation",
+  "thingRequired": "{{chose}} est nécessaire",
+  "title": "Communautés ouvertes",
+  "token": "Jeton",
+  "transfer": {
+    "desc": "Transférer la propriété de cette congrégation à un autre utilisateur.",
+    "transfer": "Transfert"
+  },
+  "unspecified": "Non spécifié",
+  "warning": "Êtes-vous sûr de vouloir continuer ?",
+  "warningNote": "Cette action ne peut être annulée.",
+  "website": "Site web"
+}
